--- a/package.json
+++ b/package.json
@@ -12,11 +12,9 @@
     "@headlessui/react": "^2.0.3",
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
-    "leaflet": "^1.9.4",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18",
-    "react-leaflet": "^4.2.1"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "eslint": "^8",
