--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.0.3",
+    "apexcharts": "^3.49.1",
     "axios": "^1.6.8",
+    "cities.json": "^1.1.36",
     "dotenv": "^16.4.5",
     "next": "14.2.3",
     "react": "^18",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18"
   },
   "devDependencies": {
